--- a/slides/_presentation-template.html
+++ b/slides/_presentation-template.html
@@ -21,28 +21,33 @@
     <div class="reveal">
       <div class="slides">
         <section data-state="title">
-          <h2 class="title" style="font-size: 7rem;">
+          <h2 class="title" style="font-size: 7rem">
             <b>Spring GraphQL Workshop</b>
           </h2>
 
           <h3>
-            <span class="transparent-bg">
-              20. April 2022
-            </span>
+            <span class="transparent-bg"> 20. April 2022 </span>
           </h3>
 
           <h4>
             <span class="transparent-bg">
-              <a href="https://nilshartmann.net" target="_blank">Nils Hartmann</a> |
-              <a href="https://twitter.com/nilshartmann" target="_blank">@nilshartmann</a>
+              <a href="https://nilshartmann.net" target="_blank"
+                >Nils Hartmann</a
+              >
+              |
+              <a href="https://twitter.com/nilshartmann" target="_blank"
+                >@nilshartmann</a
+              >
             </span>
           </h4>
 
-          <p style="margin-top: 4rem;"></p>
+          <p style="margin-top: 4rem"></p>
           <div>
             <h3><span class="transparent-bg">Slides</span></h3>
             <p>
-              <span class="transparent-bg">Lokal: 2022_04_20_spring-graphql.html</span>
+              <span class="transparent-bg"
+                >Lokal: 2022_04_20_spring-graphql.html</span
+              >
             </p>
           </div>
         </section>
@@ -90,7 +95,7 @@
         </section>
 
         <section data-markdown>
-  <textarea data-template>
+          <textarea data-template>
 ## Slide Code inside Lists
 
 * Here comes a java example inside a list, the code block is aligned with all other items in this list.
@@ -124,9 +129,10 @@
 <!-- .element: class="todo" -->TODOs (not visible for viewers, VS Code shortcut: mdt)
 
 
-  </textarea>
+  </textarea
+          >
         </section>
-       
+
         <section>
           <h2>Geschafft! 😊</h2>
           <h3>Vielen Dank für Eure Teilnahme!</h3>
@@ -156,18 +162,11 @@
           </p>
         </section>
       </div>
+      <script src="revealjs/reveal.js/dist/reveal.js"></script>
+      <script src="revealjs/reveal.js/plugin/notes/notes.js"></script>
+      <script src="revealjs/reveal.js/plugin/markdown/markdown.js"></script>
+      <script src="revealjs/reveal.js/plugin/highlight/highlight.js"></script>
+      <script src="revealjs/config.js"></script>
     </div>
-    <script src="revealjs/reveal.js/dist/reveal.js"></script>
-    <script src="revealjs/reveal.js/plugin/notes/notes.js"></script>
-    <script src="revealjs/reveal.js/plugin/markdown/markdown.js"></script>
-    <script src="revealjs/reveal.js/plugin/highlight/highlight.js"></script>
-    <script src="revealjs/config.js"></script>
-      </div>
-    </div>
-    <script src="revealjs/reveal.js/dist/reveal.js"></script>
-    <script src="revealjs/reveal.js/plugin/notes/notes.js"></script>
-    <script src="revealjs/reveal.js/plugin/markdown/markdown.js"></script>
-    <script src="revealjs/reveal.js/plugin/highlight/highlight.js"></script>
-    <script src="revealjs/config.js"></script>
   </body>
 </html>
